# clangd-test

./: .clangd  CMakeLists.txt  CMakePresets.json  README.md  build.sh
src/: main.cpp  somefile.cppm  types.cppm
